# test-package-managers

./: .gitignore  README.md  justfile
cmake/: FindGeogram.cmake
docs/: clion.md  vm.md
projects/nix-flake/: CMakeLists.txt  flake.nix
projects/nix-flake/src/: main.cpp
projects/pixi/: CMakeLists.txt  pixi.toml
projects/pixi/.pixi/: config.toml
projects/pixi/src/: main.cpp
projects/vcpkg/: CMakeLists.txt  CMakePresets.json  vcpkg.json
projects/vcpkg/src/: main.cpp
scripts/: install-nix.sh  install-pixi.sh  install-vcpkg.sh  provision-ubuntu-vcpkg.sh  provision-ubuntu.sh
vm/: cloud-init.yaml
